--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "autofiles",
   "version": "1.0.0",
   "description": "This script is used to automate file creation by using templates.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Oldie55/autofiles"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
